--- a/war/index.html
+++ b/war/index.html
@@ -10,6 +10,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Hello Ben and Eli</title>
+     <title>Hello Eli and Ben</title>
   </head>
 
   <body>
