--- a/war/index.html
+++ b/war/index.html
@@ -13,15 +13,18 @@
      <title>Hello Eli and Ben</title>
   </head>
 
-  <body>
+ <body bgcolor="FFFFF">
     <h1>Hello App Engine!</h1>
 	
-    <table>
+    <table  >
       <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
+        <td colspan="3" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="mtajava">Mtajava</a></td>
+      <td><a href="mtajava"><img src="http://srv2.jpg.co.il/7/56445753134cf.png" alt="MTA (2)" /></a><td>
+      </tr>
+      <tr>
+      <td> <a href="ex03"><img src="http://srv2.jpg.co.il/9/564458bd7c783.png" alt="ex03" /></a><td>
       </tr>
     </table>
   </body>
