i changed the hello app engine to wellcome to ben and eli projects

--- a/war/index.html
+++ b/war/index.html
@@ -14,7 +14,7 @@
   </head>
 
  <body bgcolor="FFFFF">
-    <h1>Hello App Engine!</h1>
+    <h1>wellcome to Eli and Ben projects!!!</h1>
 	
     <table  >
       <tr>
