--- a/war/index.html
+++ b/war/index.html
@@ -26,6 +26,9 @@
       <tr>
       <td> <a href="ex03"><img src="http://srv2.jpg.co.il/9/564458bd7c783.png" alt="ex03" /></a><td>
       </tr>
+       <tr>
+      <td> <a href="stockdetails"><img src="http://srv2.jpg.co.il/9/564458bd7c783.png" alt="ex03" /></a><td>
+      </tr>
     </table>
   </body>
 </html>
