--- a/war/index.html
+++ b/war/index.html
@@ -14,7 +14,7 @@
   </head>
 
  <body bgcolor="FFFFF">
-    <h1>wellcome to Eli and Ben projects!!!</h1>
+    <h1>Wellcome to Eli and Ben projects!!!</h1>
 	
     <table  >
       <tr>
@@ -26,8 +26,8 @@
       <tr>
       <td> <a href="ex03"><img src="http://srv2.jpg.co.il/9/564458bd7c783.png" alt="ex03" /></a><td>
       </tr>
-       <tr>
-      <td> <a href="stockdetails"><img src="http://srv2.jpg.co.il/9/564458bd7c783.png" alt="ex03" /></a><td>
+      <tr>
+     <td> <a href="stockdetails"><img src="http://srv2.jpg.co.il/8/564db5bb2c59c.png" alt="stockdetails" /></a><td>
       </tr>
     </table>
   </body>
