--- a/war/index.html
+++ b/war/index.html
@@ -29,6 +29,9 @@
       <tr>
      <td> <a href="stockdetails"><img src="http://srv2.jpg.co.il/8/564db5bb2c59c.png" alt="stockdetails" /></a><td>
       </tr>
+      <tr>
+     <td> <a href="portfolio"><img src="http://srv2.jpg.co.il/8/564db5bb2c59c.png" alt="stockdetails" /></a><td>
+      </tr>
     </table>
   </body>
 </html>
