--- a/war/index.html
+++ b/war/index.html
@@ -14,22 +14,10 @@
   </head>
 
  <body bgcolor="FFFFF">
-    <h1>Wellcome to Eli and Ben projects!!!</h1>
+    <h1>Stock Portfolio</h1>
 	
     <table  >
-      <tr>
-        <td colspan="3" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-      <td><a href="mtajava"><img src="http://srv2.jpg.co.il/7/56445753134cf.png" alt="MTA (2)" /></a><td>
-      </tr>
-      <tr>
-      <td> <a href="ex03"><img src="http://srv2.jpg.co.il/9/564458bd7c783.png" alt="ex03" /></a><td>
-      </tr>
-      <tr>
-     <td> <a href="stockdetails"><img src="http://srv2.jpg.co.il/8/564db5bb2c59c.png" alt="stockdetails" /></a><td>
-      </tr>
-      <tr>
+       <tr>
      <td> <a href="portfolio"><img src="http://srv2.jpg.co.il/8/564db5bb2c59c.png" alt="stockdetails" /></a><td>
       </tr>
     </table>
