--- a/war/index.html
+++ b/war/index.html
@@ -14,12 +14,16 @@
   </head>
 
  <body bgcolor="FFFFF">
-    <h1>Stock Portfolio</h1>
+    <h1 style= "color:blue;">Wellcome to Eli and Ben projects!!!</h1>
 	
     <table  >
-       <tr>
-     <td> <a href="portfolio"><img src="http://srv2.jpg.co.il/8/564db5bb2c59c.png" alt="stockdetails" /></a><td>
+      <tr>
+        <td colspan="3" style="font-weight:bold;">Available Servlets:</td>       
       </tr>
+      <tr>
+       <td> <a href="portfolio"><img src="http://srv1.jpg.co.il/8/565f440971d79.png" alt="ex05-showPortfolio" /></a>
+      </tr>
+      
     </table>
   </body>
 </html>
