--- a/war/index.html
+++ b/war/index.html
@@ -21,7 +21,7 @@
         <td colspan="3" style="font-weight:bold;">Available Servlets:</td>       
       </tr>
       <tr>
-       <td> <a href="portfolio"><img src="http://srv1.jpg.co.il/8/565f440971d79.png" alt="ex05-showPortfolio" /></a>
+      <td><a href="portfolio"><img src="http://srv2.jpg.co.il/6/56715b0d86159.png" alt="exo7" /></a></a>
       </tr>
       
     </table>
