--- a/war/index.html
+++ b/war/index.html
@@ -14,7 +14,7 @@
   </head>
 
  <body bgcolor="FFFFF">
-    <h1 style= "color:blue;">Wellcome to Eli and Ben projects!!!</h1>
+    <h1 style= "color:blue;">Stock Portfolio</h1>
 	
     <table  >
       <tr>
